# apog

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pythonpackage.yml
apog/: __init__.py  apog.py
tests/: test_apog.py
