[tool.poetry]
name = "apog"
version = "0.1.0"
description = "Argparse Logger for Python"
authors = ["Shunta Komatsu <skmatz217@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.25.3"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.7.9"
mypy = "^0.761"
pylint = "^2.4.4"
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
